# Marketing-Campaign-Performance-ROI-Analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  setup.py
dashboard/: __init__.py  app.py
data/: cleaned_data.csv  raw_data.csv
models/: __init__.py  predict_performance.py
notebooks/: eda_analysis.ipynb
outputs/reports/: feature_importance.csv  model_metrics.json
sql/: analysis_queries.sql
src/: __init__.py  data_generator.py  data_preprocessing.py
tests/: __init__.py  test_pipeline.py
